=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 3.06 - In Development

=over

Normalize Unicode characters coming in so that we always have single
grapheme characters. Unicode can have "composed" characters where the
same character is actually represented by combining multiple characters.
Use NFC normalization so that we just store a single character. This will
make it easier to do things like full text search on Unicode characters
that might have been submitted as multiple graphemes. [Michael Peters]

=over

Fixed IE (6, 7 & 8) where the Category Chooser on Edit Media screen
was hidden behind every table but the initial one (the meta-data
table). [Michael Peters]

=over

Per user requests, changed default sort order for Find Story 
and Find Media interfaces (toplevel screens and StoryLink/MediaLink 
screens) to descending ID (instead of ascending ID) so newest items 
are visible on the first page. [Noam Weinstein]

=over

Fixed issue (discovered by Dave Kaufman) where Media and Category Edit 
screens contained duplicate "Done With" & "Delete" buttons when editing
containers, and -- in the case of Category -- the inner "Done With"
was failing. (The above issues appear to have been caused by 
ElementEditor.tmpl being changed without all of the templates that include 
ElementEditor.tmpl being updated.) Also renamed the top-level (big green)
"Delete" buttons on Edit screens "Delete Story", "Delete Media", "Delete 
Category", and "Delete Template" since top-level objects are being
accidentally deleted from within containers by users who are intending
to delete only the container. Finally, added upward arrow to the right 
of innermost "Delete" on Edit screens in order to differentiate THIS 
delete (which operates on the sub-elements above it) from the other two! 
[Noam Weinstein]

=item *

Made ElementEditor's "Find Story" GUI remember (within a session) 