@@ -6,6 +6,12 @@ This document contains a list of changes for each release of Krang.
 
 =over
 
+Fixed error when publishing a MediaLink element that didn't actually
+have a media object selected. Now we just silently return and continue
+with the publish. [Michael Peters]
+
+=over
+
 Normalize Unicode characters coming in so that we always have single
 grapheme characters. Unicode can have "composed" characters where the
 same character is actually represented by combining multiple characters.
